<resources>
    <string name="app_name">GetHired</string>
    <string name="title_section1">Job</string>
    <string name="title_section2">Me</string>
    <string name="title_section3">Topic</string>
    <string name="title_section4">Home</string>
    <string name="expertise_level">专业水平</string>
    <string name="analysis_thinking">分析思考</string>
    <string name="language_express">语言表达</string>
    <string name="compress_strain">抗压应变</string>
    <string name="attitude_etiquette">态度礼仪</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_addjob">Post a Job</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_login">Log In</string>
    <string name="title_addJob">Add Job</string>
    <string name="action_unsave">Remove it from my saving list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_job">AddJobActivity</string>
    <string name="title_information">Your Information</string>
    <string name="title_Basic">Basic Information</string>
    <string name="title_Detail">Detail</string>
    <string name="title_web">Apply the job on other site</string>
    <string name="title_regemployee">Sign Up To Find A Job</string>
    <string name="title_regemployer">Sign Up To Post A Job</string>
    <string name="jobName">Job Name*</string>
    <string name="district">District*</string>
    <string name="company">Company*</string>
    <string name="description">Description*</string>
    <string name="email">Email(recommend)</string>
    <string name="weblink">Weblink</string>
    <string name="hint_jobName">e.g. IOS developer</string>
    <string name="hint_district">e.g. California, USA</string>
    <string name="hint_company">e.g. Job Search Company</string>
    <string name="hint_description">Enter job requirements, description in detail
    will help you find a good employee sooner</string>
    <string name="hint_email">e.g.wong@job.com</string>
    <string name="hint_weblink">e.g.www.job.com/joblink</string>
    <string name="hint_address">e.g.jurong east road</string>
    <string name="hint_size">e.g. 100 staff</string>
    <string name="hint_type">e.g. private or goverment </string>
    <string name="hint_revenue">e.g. 100,000/year</string>
    <string name="hint_name">e.g. Wang Xiaorui</string>
    <string name="hint_gender">e.g. male or female</string>
    <string name="hint_education">e.g. bechalor</string>
    <string name="hint_experience">e.g. four years as an ios developer</string>
    <string name="jobdescription">Description</string>
    <string name="jobcompanyinfo">Company Infomation</string>
    <string name="jobcompanyname">Company</string>
    <string name="jobheadquarter">Headerquarter</string>
    <string name="jobsize">Size</string>
    <string name="jobfounded">Founded</string>
    <string name="jobrevenue">Revenue</string>
    <string name="jobtype">Type</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="gender">Gender</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="reg_employee">Register to find a job</string>
    <string name="companyname">Company Name</string>
    <string name="phone">Phone</string>
    <string name="collectedjobs">Your saved Jobs</string>
    <string name="postjobs">Your posted Jobs</string>
    <string name="reg_employer">Register to post a job</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit</string>
    <string name="review">Review</string>
    <string name="save">Save</string>
    <string name="linkbtn">Apply on other website</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="submit_confirm_upemployer">Update your information? You will receive an email
        conformation.</string>
    <string name="submit_conform_upemployer_btn">Update your info</string>
    <string name="submit_confirm_message">Post this job? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Post Job</string>
    <string name="title_activity_job_page">JobPageActivity</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="title_activity_collected_jobs">CollectedJobsActivity</string>
    <string name="title_activity_collected_job_list">CollectedJobListActivity</string>
    <string name="title_activity_posted_job_list">PostedJobListActivity</string>
    <string name="title_activity_update_employer">UpdateEmployerActivity</string>
    <string name="title_activity_update_can">UpdateCanActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_register_employee">RegisterEmployeeActivity</string>
    <string name="title_activity_reg_employer">RegEmployerActivity</string>
    <string name="recommendTopic">为你推荐的话题</string>
    <string name="recommendedTopic">化妆品销售</string>
    <string name="recommendedTopic1">化妆品销售</string>
    <string name="search_topic">搜索你感兴趣的话题</string>
    <string name="addTopic">增加话题</string>
    <string name="jobMarket">职场</string>
    <string name="edit">编辑</string>
    <string name="finished">完成</string>
    <string name="topic">话题</string>
    <string name="myTopic">我的话题</string>
    <string name="myTopic1">化妆品销售</string>
    <string name="myTopic2">化妆品销售</string>
    <string name="hotTopic">热门话题</string>
    <string name="hotTopic1">韩束怎么做微商</string>
    <string name="hotTopic2">韩束怎么做微商</string>
    <string name="hotTopic3">韩束怎么做微商</string>
    <string name="personal">个人</string>
    <string name="position">职位</string>
    <string name="home_classify">化妆品销售</string>
    <string name="home_time1">刚刚提问</string>
    <string name="home_time2">2小时前回答</string>
    <string name="home_answer_number1">0个人回答了</string>
    <string name="home_answer_number2">20个人回答了</string>
    <string name="home_question_title">怎么样做好化妆品销售呢？</string>
    <string name="home_question_content">我是一个销售菜鸟，对化妆品销售感兴趣。想请教一下如何在微信朋友圈和微博这些社交平台展开营销呢？...</string>
    <string name="home_viewMore">查看更多</string>
    <string name="home_answerButton1">回答</string>
    <string name="home_answerButton2">赞|20</string>
    <string name="home_interest1">不感兴趣</string>
    <string name="home_interest2">没有帮助</string>
    <string name="home_follow">关注</string>
    <string name="home_follow_number1">3</string>
    <string name="home_apostrophe">...</string>
    <string name="jobMarket_searchContent">搜索你感兴趣的内容</string>
    <string name="search">搜索</string>
    <string name="topicDetail">话题详情</string>
    <string name="topicData">话题资料</string>
    <string name="topicAbout">相关话题</string>
    <string name="followers">关注|399</string>
    <string name="topicDataDetail">根据《中华人民共和国产品质量法》、《中华人民共和国标准化法》、《中华人民共和国工业产品生产许可证管理条例》、《国务院关于加强食品等产品安全监督管理的特别规定》等法律法规，制定本规定。</string>
    <string name="topicDetail_ID">陈海鸥，聚美某品西一欧</string>
    <string name="topicAbout1">汽车销售</string>
    <string name="topicAbout2">房地产销售</string>
    <string name="question">问题</string>
    <string name="question_requestToAnswer">邀请回答</string>
    <string name="answerTheQuestion">回答该问题</string>
    <string name="question_ID">陈海鸥</string>
    <string name="question_ID_detail">聚美某品西一欧</string>
    <string name="question_comment">评论</string>
    <string name="question_comment_number">9</string>
    <string name="comment">评论</string>
    <string name="cancel_comment">取消回复</string>
    <string name="date_comment">08-26</string>
    <string name="write_comment">写下你的评论...</string>
    <string name="judge_comment">回答得很好！</string>
    <string name="response_comment">发送给陈海鸥的回复...</string>
    <string name="praise_comment">赞</string>
    <string name="praise_num">5</string>
    <string name="quiz">提问</string>
    <string name="quiz_release">发布</string>
    <string name="quiz_describe">描述</string>
    <string name="quiz_topic">话题</string>
    <string name="quiz_topic_about">添加相关话题</string>
    <string name="quiz_question">请输入您的问题...</string>
    <string name="quiz_describe_content">请对您的问题补充说明...</string>
    <string name="position_search">职位搜索</string>
    <string name="positionToapply">职位申请</string>
    <string name="position_search_content"> 请输入职位/公司</string>
    <string name="location_search">请输入你需要查找的地点</string>
    <string name="position_classify">职位类别</string>
    <string name="Internet">互联网</string>
    <string name="jinrong">金融财会</string>
    <string name="jianzhu">房产建筑</string>
    <string name="gongye">工业制造</string>
    <string name="yiyao">医药化学</string>
    <string name="guanggao">广告传媒</string>
    <string name="waimao">外贸行业</string>
    <string name="other">其他行业</string>
    <string name="profession_classify">行业类别</string>
    <string name="working_place">工作地点</string>
    <string name="search_result">搜索记录：化妆品销售/杭州</string>
    <string name="position_search_result">搜索结果</string>
    <string-array name="position_area">
        <item>地区</item>
        <item>全部</item>
        <item>拱墅区</item>
        <item>拱墅区</item>
        <item>拱墅区</item>
        <item>拱墅区</item>
    </string-array>
    <string name="position_area_selected">杭州</string>
    <string-array name="position_category">
        <item>职业性质</item>
        <item>全部</item>
        <item>全职</item>
        <item>实习</item>
        <item>兼职</item>
    </string-array>
    <string name="position_category_selected">全职</string>
    <string-array name="position_more_choice">
        <item>更多筛选</item>
        <item>发布时间</item>
        <item>月薪范围</item>
        <item>学历要求</item>
        <item>公司规模</item>
    </string-array>
    <string name="position_title">产品运营 3000+提成</string>
    <string name="position_release_time">8-15</string>
    <string name="position_firm">杭州马马网络科技有限公司</string>
    <string name="position_more">杭州 | 兼职 | 大专</string>
    <string name="position_salary">3000底薪+提成</string>
    <string name="position_detail_header">详情</string>
    <string name="position_search_hint">请输入订单编号或日期...</string>
    <string name="search_history">历史记录</string>
    <string name="search_history1">产品经理</string>
    <string name="search_history2">化妆品销售专员</string>
    <string name="search_history_delete">删除历史记录</string>
    <string name="position_apply">申请职位</string>
    <string name="position_tip_off">举报</string>
    <string name="position_share">分享</string>
    <string name="position_detail">职位详情</string>
    <string name="position_welfare">职位福利</string>
    <string name="position_welfare_content">五险一金、带薪休假、股票期权、五险一金、带薪休假、股票期权</string>
    <string name="position_request">任职要求</string>
    <string name="function_score">78</string>
    <string name="function_score_evaluate">能力不错</string>
    <string name="function_evaluate_time">评估时间：</string>
    <string name="function_evaluate_time_specific">05.09</string>
    <string name="function_feedback">职能测评分是根据企业反馈</string>
    <string name="function_expertise_level">专业水平</string>
    <string name="function_language_express">语言表达</string>
    <string name="function_compress_strain">抗压应变</string>
    <string name="function_attitude_etiquette">态度礼仪</string>
    <string name="function_analysis_thinking">分析思考</string>
</resources>