<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.mardin.job.widgets.wizard.ui.UpdateCanFragment">-->

    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
    <!--<TextView android:layout_width="match_parent" android:layout_height="match_parent"-->
        <!--android:text="@string/hello_blank_fragment" />-->

<!--</FrameLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer">
    <TextView style="@style/WizardPageTitle" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_your_name" />
            <EditText android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textCapWords"
                android:hint="@string/hint_name"
                android:layout_marginBottom="16dp" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/gender" />

            <EditText android:id="@+id/genderET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:hint="@string/hint_gender" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/education" />

            <EditText android:id="@+id/educationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:hint="@string/hint_education" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/experience" />

            <EditText android:id="@+id/experienceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:hint="@string/hint_experience" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>