<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.mardin.job.widgets.wizard.ui.AddJobFirstFragment">-->

    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
    <!--<TextView android:layout_width="match_parent" android:layout_height="match_parent"-->
        <!--android:text="@string/hello_blank_fragment" />-->

<!--</FrameLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer">

    <TextView style="@style/WizardPageTitle" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView style="@style/WizardFormLabel"
                android:text="@string/jobName" />

            <EditText android:id="@+id/jobNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textCapWords"
                android:hint="@string/hint_jobName"
                android:layout_marginBottom="16dp" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/district" />

            <EditText android:id="@+id/districtET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:hint="@string/hint_district" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/company" />

            <EditText android:id="@+id/companyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:hint="@string/hint_company" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>