<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/header"
        android:layout_height="50dp">

        <ImageView
            android:paddingLeft="5dp"
            android:clickable="true"
            android:src="@drawable/turn_left"
            android:id="@+id/turn_left"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/question_jobMarket"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/jobMarket"
            android:textColor="#ffffff" />

        <TextView

            android:layout_gravity="center"
            android:layout_width="wrap_content"
            style="@style/text_title"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/question"
            android:textSize="20sp"/>

        <ImageView
            android:paddingRight="10dp"
            android:clickable="true"
            android:src="@drawable/white_add"
            android:id="@+id/question_header_add"
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <ImageView
            android:paddingRight="5dp"
            android:clickable="true"
            android:src="@drawable/search"
            android:id="@+id/question_header_search"
            android:layout_width="25dp"
            android:layout_height="25dp" />

    </LinearLayout>

    <!-- One -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:text="@string/home_classify"
            style="@style/home_classify"
            android:background="#F0F0F0"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_question_title"
            style="@style/home_question_title"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/home_question_content"
            style="@style/home_question_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/question_requestToAnswer"
                style="@style/home_answerButton"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_follow"
                style="@style/home_follow"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_follow_number1"
                style="@style/home_follow_number"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_answerButton1"
                style="@style/home_follow_number"
                android:paddingLeft="20dp"/>

            <TextView
                android:id="@+id/question_answer_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_follow_number1"
                style="@style/home_follow_number"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/home_apostrophe"
                style="@style/home_apostrophe"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#D2E9FF"
            android:text="@string/answerTheQuestion"
            android:textSize="16sp"
            style="@style/home_follow"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <ImageView
        android:background="#EAEAEA"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- Two -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/question_ID"
            android:textSize="15sp"
            style="@style/home_interest"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/question_ID_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_ID_detail"
            style="@style/home_time"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/home_question_content"
            style="@style/home_question_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <Button
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:text="@string/home_answerButton2"
                style="@style/home_answerButton"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_interest2"
                style="@style/home_interest"
                android:paddingLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_comment"
                style="@style/home_follow"
                android:paddingLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_comment_number"
                style="@style/home_follow_number"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/home_apostrophe"
                style="@style/home_apostrophe"
                android:paddingRight="10dp"/>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>